@@ -1,3 +1,8 @@
+Wed Aug 12 23:35:59 1998  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* file-chflags.c (diskfs_S_file_chflags): Only set
+	NP->dn_set_ctime if we actually set the flags.
+
 1998-10-26  Gordon Matzigkeit  <gord@trick.fig.org>
 
 	* init-startup.c (diskfs_startup_diskfs): Use diskfs_nput to free
